--- a/src/bulbs-cms/clickventure-edit/clickventure-edit-node-toolbar/clickventure-edit-node-toolbar.less
+++ b/src/bulbs-cms/clickventure-edit/clickventure-edit-node-toolbar/clickventure-edit-node-toolbar.less
@@ -4,6 +4,7 @@ clickventure-edit-node-toolbar {
   margin-left: 250px;
   position: absolute;
   width: 550px;
+  z-index: 100;
 
   .clickventure-edit-node-toolbar-title {
     min-height: 34px;
